--- a/Tontine/Application mobile/Frontend/pages/Accueil/Accueil.wxss
+++ b/Tontine/Application mobile/Frontend/pages/Accueil/Accueil.wxss
@@ -124,13 +124,32 @@
     height: 120rpx;
   }
   
-  .image-lien {
+  .image-lien1 {
     width: 40rpx;
     height: 40rpx;
   }
   
-  .modal-title-container {
-      display: flex;
+  .modal-title-container1 {
+      align-items: center;
+      text-align: center;
+  }
+
+  .close-button {
+    position: absolute;
+    right: 30rpx;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 60rpx;
+    height: 60rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .close-icon {
+    font-size: 48rpx;
+    color: #6b7280;
+    line-height: 1;
   }
 
 
@@ -147,8 +166,22 @@
     align-items: center;
     justify-content: center;
   }
+
+
+  .modal-overlay1 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+  }
   
-  .modal-container {
+  .modal-container1 {
     width: 95%;
     max-height: 85vh;
     background: #fff;
@@ -168,7 +201,7 @@
     }
   }
   
-  .modal-header {
+  .modal-header1 {
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -176,7 +209,7 @@
     padding: 30rpx;
   }
   
-  .modal-title {
+  .modal-title1 {
     font-size: 30rpx;
     font-weight: 600;
     color: #111827;
@@ -186,17 +219,17 @@
   
 
   
-  .modal-scroll {
+  .modal-scroll1 {
     flex: 1;
     max-height: calc(85vh - 200rpx);
     overflow-y: auto;
   }
   
-  .modal-body {
+  .modal-body1 {
     padding: 32rpx;
   }
   
-  .input-group {
+  .input-group1 {
     margin-bottom: 30rpx;
   }
   
@@ -208,7 +241,7 @@
     display: block;
   }
   
-  .input-field,
+  .input-field1,
   .textarea-field {
     width: 100%;
     padding: 15rpx 15rpx;
@@ -247,11 +280,23 @@
     justify-content: center;
     text-align: center;
     margin-right: 5%;
-
   }
-  
+
+  .modal-footer1 {
+    background: #fff;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-left: 28%;
+    margin-bottom: 5%;
+  }
+
+  .modaliteText {
+      font-size: 28rpx;
+  }
+
   .confirm-button {
-    width: 100%;
+    width: 90%;
     height: auto;
     background-color: #FF7900;
     color: #ffffff;
@@ -262,9 +307,27 @@
     box-shadow: 0 6rpx 20rpx rgba(255, 121, 0, 0.4);
     transition: transform 0.2s ease;
     padding: 20rpx;
+    justify-content: center;
+    align-items: center;
   }
   
-  .confirm-button:active {
+  .confirm-button1 {
+    width: 50%;
+    height: auto;
+    background-color: #FF7900;
+    color: #ffffff;
+    border-radius: 20rpx;
+    font-size: 32rpx;
+    font-weight: 600;
+    border: none;
+    box-shadow: 0 6rpx 20rpx rgba(255, 121, 0, 0.4);
+    transition: transform 0.2s ease;
+    padding: 20rpx;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .confirm-button1:active {
     transform: scale(0.98);
   }
   
