--- a/Tontine/Application mobile/Frontend/inscription/inscription.wxml
+++ b/Tontine/Application mobile/Frontend/inscription/inscription.wxml
@@ -14,7 +14,7 @@
         <text style="margin-left: 5px;">Avec Google</text> 
     </view>
 
-    <view style="align-items: center; display: flex; padding: 15px; border: solid 3rpx;     border-radius: 10px;"> 
+    <view style="align-items: center; display: flex; padding: 15px; border: solid 3rpx; border-radius: 10px;"> 
         <image src="../../images/facebook.png" style="height: 30px; width: 30px; ">
         </image> <text>Avec Facebook</text> 
     </view>
@@ -23,12 +23,12 @@
 <view style="background-color: rgb(65, 63, 63); height: 0.25px; margin-left: 50px ; margin-right: 50px"> 
 </view>
 <!-- Les champs du fomulaire  -->
-<form bindsubmit="">
-    <input type="text" placeholder="Nom" style="border: solid 3rpx; padding: 15px; margin: 20px; border-radius: 10px;"/>
-    <input type="text" placeholder="Prénom" style="border: solid 3rpx; padding: 15px; margin: 20px; border-radius: 10px;"/>
-    <input type="text" placeholder="Pseudo" style="border: solid 3rpx; padding: 15px; margin: 20px; border-radius: 10px;"/>
+<form bindsubmit="inscription">
+    <input type="text" placeholder="Nom" style="border: solid 3rpx; padding: 15px; margin: 20px; border-radius: 10px;" bindinput="onNomChange" value="{{nom}}"/>
+    <input type="text" placeholder="Prénom" style="border: solid 3rpx; padding: 15px; margin: 20px; border-radius: 10px;" bindinput="onPrenomsChange" value="{{prenoms}}"/>
+    <input type="text" placeholder="Pseudo" style="border: solid 3rpx; padding: 15px; margin: 20px; border-radius: 10px;" bindinput="onPseudoChange" value="{{pseudo}}"/>
     <!-- Champs date de naissance -->
-    <picker mode="date" start="2000-09-01" end="2025-06-01" bindchange="onDateChange" value="">
+    <picker mode="date" start="2000-09-01" end="2025-06-01" bindchange="onDateChange" value="{{date_de_naissance}}">
         <view style="position: relative; margin: 20px;">
             <input
             type="text"
@@ -41,23 +41,22 @@
             />
         </view>
     </picker>
-    <input type="number" placeholder="Numéro de Téléphone" style="border: solid 3rpx; padding: 15px; margin: 20px 20px 0px 20px; border-radius: 10px;"/>
+    <input type="number" placeholder="Numéro de Téléphone" style="border: solid 3rpx; padding: 15px; margin: 20px 20px 0px 20px; border-radius: 10px;" bindinput="onContactChange" value="{{contact}}"/>
     <!-- Champs d'image -->
     <view>
-  <view bindtap="chooseImage" style="border: solid 3rpx; padding: 15px; margin: 20px; border-radius: 10px; position: relative; margin: 20px;">
-    Entrer la photo de votre pièce d'identité
-    <image
-            src="../../images/identity.jpg"
-            style="width: 26px; height: 26px; position: absolute; right: 15px; top: 50%; transform: translateY(-50%); "
-            />
-  </view>
+    <input 
+        type="password" 
+        placeholder="Mot de passe" 
+        style="border: solid 3rpx; padding: 15px; margin: 20px; border-radius: 10px;" 
+        value="{{mot_de_passe}}" 
+        bindinput="onPasswordChange"
+    />
 
   <!-- Conteneur centré pour l’image -->
   <view wx:if="{{imagePath}}" style="text-align: center; margin-top: 10px;">
     <image src="{{imagePath}}" style="width: 100px; height: 100px;" />
   </view>
 </view>
-
 
     <label class="checkbox">
     <checkbox value="" checked="" style="margin-left: 30px;"/> Conditions d'utilisations
@@ -70,6 +69,5 @@
 <view style="text-align: center; margin-top: 20px;">Créer un compte ? 
     <text style="color: rgb(255, 135, 23);" bind:tap="pageConnexion">Se connecter</text> 
 </view>
-
 
 </scroll-view>
